--- a/src/styles/_tokens.scss
+++ b/src/styles/_tokens.scss
@@ -48,6 +48,12 @@ $bp-md: 768px;
 $bp-lg: 1024px;
 $bp-xl: 1280px;
 
+$range-color: $color-primary;
+$range-bg: #000000;
+$range-height: 6px;
+$range-border: 1px;
+$thumb-size: 14px;
+
 // Mixins
 @mixin up($bp) {
   @media (min-width: $bp) {
