refactor: remove the create song page

--- a/src/app/shared/components/sidebar/sidebar.html
+++ b/src/app/shared/components/sidebar/sidebar.html
@@ -22,10 +22,10 @@
         <lucide-icon name="user"></lucide-icon>
         Perfil
       </a>
-      <a routerLink="/song/create" class="nav-item">
+      <!-- <a routerLink="/song/create" class="nav-item">
         <lucide-icon name="upload"></lucide-icon>
         Adicionar musica
-      </a>
+      </a> -->
       } @else {
       <a routerLink="/user/login" class="nav-item">
         <lucide-icon name="log-in"></lucide-icon>
